# option_alpha_v2

./: .gitignore  CLAUDE.md  fix-business-logic.md  pyproject.toml  recommender_fix.md  v1.0-ROADMAP.md  watchlists.json  yfinance_fetch.md
.claude/: commands
.claude/epics/ai-debate-functionality/: 95.md  epic.md
.claude/epics/aidebate-architecture-fix/: 63.md  64.md  65.md  66.md  67.md  68.md  69.md  70.md  epic.md  execution-status.md  github-mapping.md
.claude/epics/aidebate-fix/: 73.md  74.md  epic.md  execution-status.md  github-mapping.md
.claude/epics/aidebate-rewrite/: 78.md  (+3 more)
.claude/prds/: ai-debate-functionality.md  aidebate-architecture-fix.md  aidebate-fix.md  aidebate-rewrite.md  dashboard-ux-enhance.md  expand-universe.md  fix-business-logic.md  live-discover-universe.md  option-alpha.md  pipeline-pattern-fix.md  recommender-fix.md  scan-quality-overhaul.md  universe-expansion.md  universe-fix.md  yfinance-fetch-error.md
ccpm/: ccpm.config
scripts/: generate_universe.py
src/option_alpha/: __init__.py  __main__.py  config.py  models.py
tests/: test_ai.py  test_backtest.py  test_cache.py  test_chains.py  test_composite.py  test_config.py  test_discovery.py  test_earnings.py  test_fetch_errors.py  test_fetcher.py  test_greeks.py  test_indicators.py  test_integration.py  test_models.py  test_normalizer.py  test_persistence.py  test_pipeline.py  test_recommender.py  test_universe.py  test_universe_integration.py  test_universe_refresh.py  test_universe_schema.py  test_universe_service.py  test_watchlists.py  test_web.py  test_web_universe.py
(+549 files in other folders)
